# innerwarden

./: ANCHOR_TESTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THREAT_MODEL.md  agent-test.toml  agents-install.md  codecov.yml  config.example.toml  config.test.toml  deny.toml  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  coverage_task.yml  feature_request.yml
.github/workflows/: anchor-tests.yml  canary.yml  ci.yml  codecov.yml  codeql.yml  dco.yml  fuzz.yml  release-classifier.yml  release.yml  scorecard.yml  security.yml  verify-doc-vs-source.yml  verify-no-falco-mentions.yml
.specify/features/010-detector-migration-phase3/: tasks.md
.specify/features/014-graph-full-connectivity/: spec.md
.specify/features/015-graph-signal-quality/: spec.md
.specify/features/018-autonomous-response/: spec.md
.specify/features/019-test-coverage-gaps/: spec.md
adr/: 0001-orphan-resolution-sidecar-jsonl.md  0002-threat-contract-layer.md  0003-kg-ttl-eviction.md  README.md
crates/agent/: Cargo.toml  build.rs
crates/agent-guard/: Cargo.toml  OWASP-AGENTIC-TOP-10.md
crates/ctl/: Cargo.toml
crates/dna/: Cargo.toml
crates/guard-cli/: Cargo.toml  README.md
crates/guard-cli/src/: install.rs  main.rs
crates/guard-cli/tests/: cli.rs
crates/sensor/: Cargo.toml  build.rs
crates/sensor-ebpf/: build.rs
crates/smm/: Cargo.toml
crates/smm/src/: acpi.rs  ktext.rs  lib.rs  main.rs  microcode.rs  msr.rs  smi.rs  tpm.rs  uefi.rs
deploy/observability/: README.md  config.alloy  grafana-dashboard-fleet.json  iw-loki-bridge.service  iw-loki-bridge.timer  loki-config.yaml  prometheus.yml  servicemonitor.yaml  sqlite-loki-bridge.py
docs/: prometheus-alerts.yaml
docs/integration-recipes/: claude-code-agent-guard.md
docs/internal/: bug-hunt-2026-04-18.md
examples/systemd/: innerwarden-sensor.service
rules/event_pipeline/: README.md
scripts/: SMOKE_TEST_MAP.md  deploy-prod.sh  memory-profile.sh  setup-wizard.sh  smoke-all.sh  update-branch-protection.sh  verify-anchor-tests.sh  verify-no-falco-mentions.sh
(+414 files in other folders)
