[package]
name = "innerwarden-smm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ring -2 firmware security — SMM monitoring, MSR guards, SPI flash integrity, UEFI/TPM attestation"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# nix is a POSIX wrapper that does not build on Windows. Gate it to unix
# (spec 085 Phantom-on-Windows Phase 0); the only user is msr.rs's MSR read,
# which is unix-only anyway (/dev/cpu). agent and ctl both depend on this crate.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs", "uio"] }

[dev-dependencies]
tempfile = "3"
